# hamoopi-libretro

./: .gitignore  CMakeLists.txt  HAMOOPI  LIBRETRO_README.md  Makefile  Makefile.libretro  README.md  hamoopi_core.cpp  libretro.cpp
docs/: INFO.txt
src/libretro/: hamoopi_core.cpp  hamoopi_core.h
src/standalone/: HAMOOPI.cpp
